Fix auto dark mode

--- a/directory-listing/grid-automode.css
+++ b/directory-listing/grid-automode.css
@@ -1,4 +1,2 @@
 @import 'grid.css';
-@media (prefers-color-scheme: dark) {
-  @import 'grid-darkmode.css';
-}
+@import 'grid-darkmode.css' (prefers-color-scheme: dark);
